--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "Airlock.js",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "An adapter to convert ga.js calls to analytics.js calls",
   "author": "Search Discovery",
   "homepage": "http://searchdiscovery.com/",
   "repository": {
-    "type" : "git",
-    "url" : "git@bitbucket.org:searchdiscovery/airlock.js.git"
+    "type": "git",
+    "url": "git@bitbucket.org:searchdiscovery/airlock.js.git"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-casperjs": "~1.4.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-uglify": "~0.2.7"
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-replace": "~0.5.1"
   },
   "scripts": {
     "test": "grunt test"
