--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-casperjs": "~1.4.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.7",
-    "grunt-replace": "~0.5.1"
+    "grunt-replace": "~0.5.1",
+    "grunt-git": "~0.2.3"
   },
   "scripts": {
     "test": "grunt test"
