--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-replace": "~0.5.1",
-    "grunt-git": "~0.2.3"
+    "grunt-git": "~0.2.3",
+    "grunt-contrib-jshint": "~0.7.2"
   },
   "scripts": {
     "test": "grunt test"
