--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.2",
   "description": "An adapter to convert ga.js calls to analytics.js calls",
   "author": "Search Discovery",
-  "homepage": "http://searchdiscovery.com/",
+  "homepage": "http://www.searchdiscovery.com/airlock",
   "repository": {
     "type": "git",
     "url": "git@bitbucket.org:searchdiscovery/airlock.js.git"
