--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "url": "git@bitbucket.org:searchdiscovery/airlock.js.git"
   },
   "devDependencies": {
+    "load-grunt-config": "^0.8.0-beta.1",
+    "load-grunt-tasks": "^0.4.0",
     "grunt": "~0.4.1",
     "grunt-casperjs": "~1.4.0",
     "grunt-contrib-watch": "~0.5.3",
@@ -16,7 +18,6 @@
     "grunt-replace": "~0.5.1",
     "grunt-git": "~0.2.3",
     "grunt-contrib-jshint": "~0.7.2",
-    "jscs": "~1.2.3",
     "grunt-jscs-checker": "~0.3.2"
   },
   "scripts": {
